# Course-Highlights

./: .gitignore  README.md
1092_Python_Intro/: project_給我一百分.csv  project_給我一百分_程式碼.py
1101_Python_Data_Analysis/: 1101017_HW1.ipynb  1101024_HW2.ipynb  1101026_HW3.ipynb  1101121_HW4.ipynb  1101127_HW5.ipynb  1101205_HW6.ipynb  1101211_HW7.ipynb
1102_Python_Management_Science/: MS_HW1_108205068.ipynb  MS_HW2_108205068.ipynb  MS_HW3_108205068.ipynb  MS_HW4_108205068.ipynb  MS_HW5_108205068.ipynb  MS_HW6_108205068.ipynb  MS_HW7_108205068.ipynb  MS_HW8_108205068.ipynb  MS_final_project.ipynb
1111_Python_Trading/: TMBA—張簡宇庭.ipynb
1112_Python_Web_Crawling/: YCfile (3).csv  永慶.ipynb
1112_R_Business_Analytics/HW1/: .RData  .Rhistory  HW.R  HW1.docx  product_list.csv
1112_R_Business_Analytics/HW2/: HW.R  HW2.docx
1112_R_Business_Analytics/HW3/: .Rhistory  HW.R  HW3.docx
1112_R_Business_Analytics/HW4/: .RData  .Rhistory  HW.R  HW4.docx
1112_R_Business_Analytics/HW5/: HW5.R  HW5.docx  movie_scream.txt
1112_R_Business_Analytics/HW6/: .RData  .Rhistory  HW6.docx
1112_R_Business_Analytics/final/: Q11.csv
1121_CPP_Financial_Computing/: CMakeLists.txt
1121_CPP_Financial_Computing/src/: main.cpp
1121_Python_Process_Mining/: Assignment_2_108205068.ipynb
